# Pramod-Octapad-Pro

./: README.md
.github/workflows/: build-apk.yml
Pramod Octapad Pro /: CMakeLists.txt  build.gradle  firebase_keys.json  generate_keys.py  settings.gradle
Pramod Octapad Pro /app/: CMakeLists.txt  build.gradle  google-services.json
Pramod Octapad Pro /app/src/main/: AndroidManifest.xml
Pramod Octapad Pro /app/src/main/cpp/: oboe_audio_engine.cpp
Pramod Octapad Pro /app/src/main/java/com/pramod/octapadprofast/: ActivationActivity.java  AudioEngine.java  FileUtil.java  KitManager.java  MainActivity.java
Pramod Octapad Pro /app/src/main/res/drawable/: app_border.xml  btn_3d_blue.xml  btn_3d_dark.xml  btn_3d_orange.xml  btn_3d_purple.xml  btn_3d_red.xml  btn_glossy_3d.xml  button_panel.xml  pad_black.xml  pad_black_selector.xml  pad_blue.xml  pad_blue_selector.xml  pad_panel.xml  title_panel.xml  top_panel.xml
Pramod Octapad Pro /app/src/main/res/layout/: activity_activation.xml  main.xml
Pramod Octapad Pro /app/src/main/res/values/: strings.xml
